Fix scrollbar appearance

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: $white;
   color: $gray-dark;
+  overflow: hidden;
 }
 
 body,
